Update folded area plot to include prd

--- a/1-analyses/folded-area/area.Rmd
+++ b/1-analyses/folded-area/area.Rmd
@@ -77,6 +77,9 @@ colnames(corrected) <- c("Label", "AreaCorr")
 # Merge corrected area to results
 results <- merge(results, corrected, by = "Label", all.x = TRUE)
 
+# Transform data frame to order the stock for plotting
+results <- transform(results, Stock=factor(Stock, levels = c("wt", "btd", "eve", "prd")))
+
 # Sum total folded area
 area <- aggregate(results$Area, list(results$Embryo), sum)
 colnames(area) <- c("Embryo", "Area")
@@ -96,6 +99,9 @@ embryos <- unique(results[, c("Embryo", "Stock", "Sample", "Genotype")])
 total <- merge(area, areacorr, by = "Embryo", all.x = TRUE)
 total <- merge(total, nfold, by = "Embryo", all.x = TRUE)
 total <- merge(total, embryos, by = "Embryo", all.x = TRUE)
+
+# Transform data frame to order the stock for plotting
+total <- transform(total, Stock=factor(Stock, levels = c("wt", "btd", "eve", "prd")))
 ```
 
 
@@ -153,23 +159,27 @@ It shows that homozygote mutants have a smaller area than heterozygote mutants,
 which in turn are slightly smaller than wildtype total folded area.
 
 ```{r total-area-per-embryo}
-ggplot(total, aes(factor(Stock, level = c("wt", "btd", "eve", "prd")), AreaCorr, fill = Genotype)) +
-  geom_violin(draw_quantiles = c("0.5"), show.legend = TRUE, trim = TRUE, alpha = 0.7, scale = "area", adjust = 1) +
-  geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.05)) +
+library(ggbeeswarm)
+ggplot(total, aes(Stock, AreaCorr, fill = Genotype)) +
+  geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE, trim = TRUE, alpha = 0.7, scale = "area", adjust = 2) +
+  #geom_dotplot(fill = "black", color = "black", binaxis = "y", binwidth = 300, stackdir = "center", position = "dodge") +
+  geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.1)) +
   scale_y_continuous(labels = function(x) x / 1000) +
   labs(x = "stocks", y = expression(paste("total folded area per embryo ", (µm^2)~x~10^3))) +
+  facet_grid(cols = vars(Stock), scales = "free_x") +
   scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
+  #scale_x_discrete(labels = c("wildtype", "heterozygote", "homozygote", "heterozygote", "homozygote")) +
   theme_classic() +
-  theme(text =  element_text(size = 30),
+  theme(text =  element_text(size = 35),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1),
-        axis.text.x = element_text(face = "italic"),
-        legend.position = c(0.93,0.9),
-        legend.text = element_text(size = 15),
-        legend.title = element_text(size = 15),
+        #axis.text.x = element_text(face = "italic"),
+        #legend.position = c(0.93,0.9),
+        #legend.text = element_text(size = 20),
+        #legend.title = element_text(size = 20),
         )
-ggsave("4-plots/total-area-per-embryo.png", width = 15, height = 9)
-ggsave("4-plots/total-area-per-embryo.svg", width = 15, height = 9)
+ggsave("4-plots/total-area-per-embryo.png", width = 12, height = 4)
+ggsave("4-plots/total-area-per-embryo.svg", width = 12, height = 4)
 
 ```
 
@@ -178,6 +188,27 @@ ggsave("4-plots/total-area-per-embryo.svg", width = 15, height = 9)
 This plots shows the total area of folded tissue in embryos with and without
 the cephalic furrow. Values are the sum of corrected areas of individual folds
 per embryo.
+
+```{r area-individual-folds}
+ggplot(results, aes(Stock, AreaCorr, fill = Genotype)) +
+  geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE, trim = TRUE, alpha = 0.7, scale = "area", adjust = 1) +
+  geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_jitterdodge(dodge.width = 1, jitter.width = 0.05)) +
+  scale_y_continuous(labels = function(x) x / 1000) +
+  labs(x = "stocks", y = expression(paste("area of individual folds ", (µm^2)~x~10^3))) +
+  scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
+  facet_grid(cols = vars(Position), scales = "free") +
+  theme_classic() +
+  theme(text = element_text(size = 30),
+        strip.background = element_blank(),
+        panel.background = element_rect(colour = "black", size=1),
+        axis.text.x = element_text(face = "italic"),
+        #legend.position = c(0.93,0.9),
+        legend.text = element_text(size = 15),
+        legend.title = element_text(size = 15),
+        )
+ggsave("4-plots/area-individual-folds.png", width = 15, height = 8)
+ggsave("4-plots/area-individual-folds.svg", width = 15, height = 8)
+```
 
 ```{r area-individual-folds}
 ggplot(results, aes(factor(Stock, level = c("wt", "btd", "eve", "prd")), AreaCorr, fill = Genotype)) +
@@ -199,6 +230,7 @@ ggplot(results, aes(factor(Stock, level = c("wt", "btd", "eve", "prd")), AreaCor
 ggsave("4-plots/area-individual-folds.png", width = 15, height = 8)
 ggsave("4-plots/area-individual-folds.svg", width = 15, height = 8)
 ```
+
 
 ## Area plots for all genes
 
